[Feature] 시장 검색 및 페이징 기능 구현